<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Activities</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="project_text">Projects</string>
    <string name="logout_text">Logout</string>
    <string name="testproject_text">Test and Project</string>
    <string name="date_text">Date</string>
    <string name="addequipment_text">Add Equipment</string> 
	<string name="addequipmentprev_text">Add Equipment From Previous Day</string> 
	<string name="addlabor_text">Add Labor</string>
	<string name="addlaborprev_text">Copy Labor From Previous entries</string>
	<string name="back_text">Back</string>
	<string name="login_text">Login</string> 
	<string name="username_text">Username</string>
	<string name="username_hint">Username</string> 
	<string name="password_text">Password</string>
	<string name="password_hint">Password</string>
	<string name="info_text">For assistance please</string>
	<string name="info_text2">contact NoteVault at</string>
	<string name="button_text">No Account? Try It!</string> 
	<string name="loginbutton_text">LOGIN</string> 
	<string name="splash_text1">Use your phone</string>
	<string name="splash_text2">to add labor, equipment,</string> 
	<string name="splash_text3">material to</string>
	<string name="splash_text4">your reports.</string>
	<string name="tm_text">TM</string>
	<string name="getstart_text">Get Started</string>
	<string name="addmaterial_text">Add Material</string>
	<string name="addmaterialprev_text">Add Material From Previous Day</string>
	<string name="login_username_text">Welcome Vishu</string>
	<string name="selectproject_text">Choose Project</string> 
	<string name="save_text">Save</string>
	<string name="equipment_text">Equipment</string>
	<string name="cancel_text">CANCEL</string>
	<string name="newname_text">New Name</string>
	<string name="name_text">Name</string>
	<string name="newcompany_text">New Company</string>
	<string name="company_text">Company</string>
	<string name="status_text">Status</string>
	<string name="quantity_text">Quantity</string>
	<string name="hour_text">Hour</string>
	<string name="description_text">Description</string>
	<string name="labor_text">Labor</string>
	<string name="newtrade_text">New Trade</string>
	<string name="trade_text">Trade</string>
	<string name="classification_text">Classification</string>
	<string name="material_text">Material</string>
	<string name="addname_text">Add Name</string>
	<string name="addpersonnel_text">Add Personnel</string>
	<string name="addcompany_text">Add Company</string>
	<string name="male_text">Male</string>
	<string name="female_text">Female</string>
	<string name="yes_text">Yes</string>
	<string name="no_text">No</string>
	<string name="linkequipment_text">Link Equipment</string>
	<string name="linkmaterial_text">Link Material</string>
 <string name="dialog_submit">SUBMIT</string>
  <string name="dialog_username">Username</string>
   <string name="dialog_pno">Phone Number</string>
    <string name="basic_action_1">Action_1</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#0ca3bc</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
   
    
    <string name="title_activity_test">TestActivity</string>
    <style name="autoscroll">
    <item name="android:singleLine">true</item>
    <item name="android:ellipsize">marquee</item>
    <item name="android:marqueeRepeatLimit">marquee_forever</item>
    <item name="android:focusable">true</item>
    <item name="android:focusableInTouchMode">true</item>
    <item name="android:scrollHorizontally">true</item>
</style>
</resources>
