<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0.0dip"
        android:background="#d0d0d0"
        android:orientation="horizontal"
        android:padding="0.0dip" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:gravity="center"
            android:src="@drawable/notevault_logo_cya_150" >
        </ImageView>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:src="@drawable/backimage2"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:paddingLeft="30dp"
            android:text="@string/back_text"
            android:textColor="#f49800"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="11dp"
            android:gravity="left"
            android:text="@string/login_text"
            android:textColor="#E18326"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="31dp"
            android:text="@string/username_text"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/roundframe"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/username_hint"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:text="@string/password_text"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/roundframe"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/password_hint"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true" 
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/info_text"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_text2"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="+1858-755-9800"
            android:textColor="#E18326"
            android:textSize="20sp" />

        <View
            android:id="@+id/view"
            android:layout_width="140dp"
            android:layout_height="0.5dp"
            android:background="#E18326" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Remember me" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#48DC6C"
            android:text="@string/loginbutton_text"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>