<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#EF901B"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="Forgot Password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/roundframe"
            android:hint="@string/dialog_username"
            android:paddingLeft="10dp"
            android:textColorHint="#EF901B" 
            android:singleLine="true">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/pno"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/roundframe"
            android:hint="@string/dialog_pno"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textColorHint="#EF901B"
            android:singleLine="true"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:background="#EF901B"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/dialog_submit"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>