<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0.0dip"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="0.0dip" >
 <LinearLayout
            android:id="@+id/image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:orientation="vertical" >
       <ImageView
                android:id="@+id/save"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="10dip"
                android:padding="10dip"
                android:src="@drawable/plus" >
            </ImageView>
      
</LinearLayout>
        <TextView
            android:id="@+id/textdata"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/addname_text"
            android:textColor="#000000"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="10dip"
            android:padding="10dip"
            android:text="@string/cancel_text"
            android:textColor="#f49800"
            android:textSize="15sp" >
        </TextView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/addname_text"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:background="#FFFFFF" >
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="Enter compliance details"
            android:textColor="#000000"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#FFA500"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/compliance_yesradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Yes"
                android:textColor="#FFFFFF"
                android:checked="false" />

            <RadioButton
                android:id="@+id/compliance_noradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginLeft="30dp"
                android:text="No"
                android:textColor="#FFFFFF"
                android:checked="true" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="#FFA500"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="Gender:"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/male_text"
                        android:textColor="#FFFFFF"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female_text"
                        android:textColor="#FFFFFF"
                        android:checked="false" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="#FFA500"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="Minority:"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/yes_text"
                        android:textColor="#FFFFFF"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_text"
                        android:textColor="#FFFFFF"
                        android:checked="false" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="#FFA500"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="Local:"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="45dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/yes_text"
                        android:textColor="#FFFFFF"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radio5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_text"
                        android:textColor="#FFFFFF"
                        android:checked="false" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/trade_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    style="@style/spinner_style"
                    android:spinnerStyle="@android:style/Widget.Spinner.DropDown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/classific_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    style="@style/spinner_style"
                    android:spinnerStyle="@android:style/Widget.Spinner.DropDown" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>